tests/snapshots/snapshots__budget_humanize_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (1001 tokens)

README.md
     1→# humanize
    12→This modest package contains various common humanization utilities, like turning a
    13→number into a fuzzy human-readable duration ("3 minutes ago") or into a human-readable
    14→size or throughput. It is localized to:
    15→
    16→- Arabic
    17→- Basque
    18→- Bengali
    19→- Brazilian Portuguese
    20→- Catalan
    21→- Danish
    22→- Dutch
      →…
    49→## API reference
    51→[https://humanize.readthedocs.io](https://humanize.readthedocs.io/)
    52→
    53→<!-- usage-start -->
    54→
    55→## Installation
    57→### From PyPI …
    63→### From source …
    71→## Usage
    73→### Integer humanization …
    89→### Date & time humanization …
   110→### Precise time delta …
   124→#### Smaller units
   126→If seconds are too large, set `minimum_unit` to milliseconds or microseconds:
   127→
   128→```pycon
      →…
   154→### File size humanization …
   166→### Human-readable floating point numbers …
   182→### Scientific notation …
   200→## Localization
   202→How to change locale at runtime:
   203→
   204→```pycon
   205→>>> import humanize
   206→>>> import datetime as dt
      →…

RELEASING.md
     1→# Release checklist …

mkdocs.yml
     1→site_name …
     2→site_url …
     3→repo_url …
     4→theme …
    18→nav …
    26→plugins …
    31→markdown_extensions …
    37→extra_css …
    40→watch …

pyproject.toml
     1→[build-system …
     8→[project …
    50→[tool.hatch …
    53→[tool.hatch.build …
    56→[tool.hatch.build.hooks.vcs …
    59→[tool.hatch.version.raw-options …
    62→[tool.ruff …
   103→[tool.pyproject-fmt …
   106→[tool.pytest.ini_options …
   113→[tool.coverage.report …
   120→[tool.mypy …

src/humanize/__init__.py
    28→__all__ = [

src/humanize/filesize.py

src/humanize/i18n.py
     8→TYPE_CHECKING = False
    13→__all__ = ["activate", "deactivate", "decimal_separator", "thousands_separator"]
    15→_TRANSLATIONS: dict[str | None, gettext_module.NullTranslations] = {
    18→_CURRENT = local()
    21→# Mapping of locale to thousands separator
    22→_THOUSANDS_SEPARATOR = {
    30→# Mapping of locale to decimal separator
    31→_DECIMAL_SEPARATOR = {

src/humanize/lists.py
     5→TYPE_CHECKING = False
     9→__all__ = ["natural_list"]

src/humanize/number.py
    12→TYPE_CHECKING = False

src/humanize/time.py
    15→TYPE_CHECKING = False
    21→__all__ = [
    30→@total_ordering
    31→class Unit(Enum):
    32→    MICROSECONDS = 0
    33→    MILLISECONDS = 1
    34→    SECONDS = 2
    35→    MINUTES = 3
    36→    HOURS = 4
    37→    DAYS = 5
    38→    MONTHS = 6
    39→    YEARS = 7
    40→

tests/test_i18n.py
    18→def test_i18n() -> None:
   225→class TestActivate:
   226→    expected_msg = (
   250→    def test_en_locale(self) -> None:
   263→    def test_none_locale(self) -> None:

tests/test_time.py
    17→ONE_MICROSECOND = 1 / 1000000
    23→ONE_HOUR = 3600
    37→class FakeDate:
    61→def test_date_and_delta() -> None:
