tests/snapshots/snapshots__budget_humanize_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2014 tokens)

README.md
     1→# humanize
    12→This modest package contains various common humanization utilities, like turning a
    13→number into a fuzzy human-readable duration ("3 minutes ago") or into a human-readable
    14→size or throughput. It is localized to:
    15→
    16→- Arabic
    17→- Basque
    18→- Bengali
    19→- Brazilian Portuguese
    20→- Catalan
    21→- Danish
    22→- Dutch
    23→- Esperanto
      →…
    49→## API reference
    51→[https://humanize.readthedocs.io](https://humanize.readthedocs.io/)
    52→
    53→<!-- usage-start -->
    54→
    55→## Installation
    57→### From PyPI
    63→### From source
    71→## Usage
    73→### Integer humanization
    89→### Date & time humanization
   110→### Precise time delta
   124→#### Smaller units
   126→If seconds are too large, set `minimum_unit` to milliseconds or microseconds:
   127→
   128→```pycon
      →…
   154→### File size humanization
   166→### Human-readable floating point numbers
   182→### Scientific notation
   200→## Localization
   202→How to change locale at runtime:
   203→
   204→```pycon
   205→>>> import humanize
   206→>>> import datetime as dt
      →…

RELEASING.md
     1→# Release checklist

docs/filesize.md
     1→# Filesize

docs/i18n.md
     1→# Internationalisation

docs/index.md
     1→# humanize

docs/lists.md
     1→# Lists

docs/number.md
     1→# Number

docs/time.md
     1→# Time

mkdocs.yml
     1→site_name: humanize
     2→site_url: https://humanize.readthedocs.io
     3→repo_url: https://github.com/python-humanize/humanize
     4→theme:
    18→nav:
    26→plugins:
    31→markdown_extensions:
    37→extra_css:
    40→watch:

pyproject.toml
     1→[build-system]
     8→[project]
    50→[tool.hatch]
    53→[tool.hatch.build]
    56→[tool.hatch.build.hooks.vcs]
    59→[tool.hatch.version.raw-options]
    62→[tool.ruff]
   103→[tool.pyproject-fmt]
   106→[tool.pytest.ini_options]
   113→[tool.coverage.report]
   120→[tool.mypy]

src/humanize/__init__.py
    26→from ._version import __version__
    28→__all__ = [

src/humanize/filesize.py
     5→from math import log
    36→def naturalsize(
    37→    value: float | str,
    38→    binary: bool = False,
    39→    gnu: bool = False,
    40→    format: str = "%.1f",
    41→) -> str:
    42→    """Format a number of bytes like a human-readable filesize (e.g. 10 kB).
    43→
    44→    By default, decimal suffixes (kB, MB) are used.
    45→
    46→    Non-GNU modes are compatible with jinja2's `filesizeformat` filter.
    47→
    48→    Examples:
    49→        ```pycon
      →        …

src/humanize/i18n.py
     5→import gettext as gettext_module
     6→from threading import local
     8→TYPE_CHECKING = False
    10→    import os
    11→    import pathlib
    13→__all__ = ["activate", "deactivate", "decimal_separator", "thousands_separator"]
    15→_TRANSLATIONS: dict[str | None, gettext_module.NullTranslations] = {
    18→_CURRENT = local()
    21→# Mapping of locale to thousands separator
    22→_THOUSANDS_SEPARATOR = {
    30→# Mapping of locale to decimal separator
    31→_DECIMAL_SEPARATOR = {
    51→def get_translation() -> gettext_module.NullTranslations:
    58→def activate(
    59→    locale: str | None, path: str | os.PathLike[str] | None = None
    60→) -> gettext_module.NullTranslations:
    61→    """Activate internationalisation.
    62→
      →…
    96→def deactivate() -> None:
    97→    """Deactivate internationalisation."""
   183→def thousands_separator() -> str:
   184→    """Return the thousands separator for a locale, default to comma.
   185→
      →…
   196→def decimal_separator() -> str:
   197→    """Return the decimal separator for a locale, default to dot.
   198→
      →…

src/humanize/lists.py
     5→TYPE_CHECKING = False
     7→    from typing import Any
     9→__all__ = ["natural_list"]
    12→def natural_list(items: list[Any]) -> str:
    13→    """Natural list.
    14→
    15→    Convert a list of items into a human-readable string with commas and 'and'.
    16→
    17→    Examples:
    18→        >>> natural_list(["one", "two", "three"])
    19→        'one, two and three'
      →        …

src/humanize/number.py
     5→import bisect
     7→from .i18n import _gettext as _
     8→from .i18n import _ngettext, decimal_separator, thousands_separator
     9→from .i18n import _ngettext_noop as NS_
    10→from .i18n import _pgettext as P_
    12→TYPE_CHECKING = False
    14→    from typing import TypeAlias
    21→def _format_not_finite(value: float) -> str:
    22→    """Utility function to handle infinite and nan cases."""
    23→    import math
    24→
      →…
    34→def ordinal …
   110→def intcomma …
   195→def intword …
   269→def apnumber …
   321→def fractional …
   385→def scientific …
   454→def clamp …
   531→def metric …

src/humanize/time.py
     8→from enum import Enum
     9→from functools import total_ordering
    11→from .i18n import _gettext as _
    12→from .i18n import _ngettext
    13→from .number import intcomma
    15→TYPE_CHECKING = False
    17→    import datetime as dt
    18→    from collections.abc import Iterable
    19→    from typing import Any
    21→__all__ = [
    30→@total_ordering
    31→class Unit(Enum):
    32→    MICROSECONDS = 0
    33→    MILLISECONDS = 1
    34→    SECONDS = 2
    35→    MINUTES = 3
    36→    HOURS = 4
    37→    DAYS = 5
    38→    MONTHS = 6
    39→    YEARS = 7
    40→
    41→    def __lt__ …
    95→def naturaldelta …
   249→def naturaltime …
   311→def naturalday …
   343→def naturaldate …
   451→def precisedelta …

tests/test_filesize.py
    86→def test_naturalsize(test_args: list[int] | list[int | bool], expected: str) -> None:

tests/test_i18n.py
    18→def test_i18n() -> None:
   225→class TestActivate:
   226→    expected_msg = (
   250→    def test_en_locale(self) -> None:
   263→    def test_none_locale(self) -> None:

tests/test_lists.py
    20→def test_natural_list …

tests/test_number.py

tests/test_time.py
    17→ONE_MICROSECOND = 1 / 1000000
    23→ONE_HOUR = 3600
    37→class FakeDate:
    58→# These are not considered "public" interfaces, but require tests anyway.
    61→def test_date_and_delta() -> None:
